--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,18 @@ section {
     background-color: #1e92851e;
 }
 
+.container {
+    padding: 50px 0;
+    width: 100%;
+}
+
+.row {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 12px;
+}
+
 .title {
     font-size: 76px;
     margin-bottom: 12px;
@@ -50,6 +62,34 @@ section {
 
 .click:active {
     transform: scale(0.8);
+}
+
+button {
+    cursor: pointer;
+}
+
+.link__hover-effect {
+    position: relative;
+}
+
+.link__hover-effect:after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    height: 3px;
+    width: 0;
+    right: 0;
+    background-color: black;
+    transition: all 300ms ease;
+}
+
+.link__hover-effect--yellow:after {
+    background-color: #dcc831;
+}
+
+.link__hover-effect:hover:after {
+    left: 0;
+    width: 100%;
 }
 
 /* 
@@ -98,6 +138,55 @@ LANDING-PAGE
     border-radius: 50%;
 }
 
+.mail__btn {
+    width: 70px;
+    height: 70px;
+    font-size: 32px;
+    border-radius: 50%;
+    border: none;
+    background-color: #1e9285;
+    color: #dcc831;
+    position: absolute;
+    bottom: 32px;
+    right: 40px;
+}
+
+.scroll {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.scroll__icon {
+    width: 20px;
+    height: 30px;
+    border: 2px solid #1e9285;
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.scroll__icon:after {
+    content: '';
+    background-color: #1e9285;
+    width: 4px;
+    height: 6px;
+    border-radius: 2px;
+    animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateY(3px);
+    }
+
+    100% {
+        transform: translateY(-3px);
+    }
+}
+
 /* 
 
 NAVIGATION 
@@ -137,4 +226,130 @@ nav {
 
 .fa-adjust {
     font-size: 20px;
+}
+
+/*
+
+PROJECTS 
+
+*/
+
+.section__title {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 60px;
+}
+
+.project {
+    padding: 80px 40px;
+}
+
+.project__img {
+    width: 100%;
+    transition: all 300ms ease;
+}
+
+.project__wrapper {
+    position: relative;
+    border-radius: 20px;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+    overflow: hidden;
+    transition: all 300ms ease;
+    height: 56vh;
+}
+
+.project__wrapper:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__wrapper {
+    opacity: 0.7;
+}
+
+.project__wrapper:hover .project__img {
+    transform: scale(1.08);
+    filter: blur(5px);
+}
+
+.project__description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: opacity 300ms, transform 450ms;
+    color: white;
+    max-width: 550px;
+}
+
+.project__description--title {
+    font-size: 42px;
+}
+
+.project__description--sub-title {
+    margin-top: 8px;
+}
+
+.project_description--para {
+    margin: 16px 0;
+}
+
+.project__description--link {
+    color: white;
+    font-size: 20px;
+    margin-right: 16px;
+    text-decoration: none;
+}
+
+.project__wrapper--bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.project__wrapper--bg:hover {
+    opacity: 0.7;
+}
+
+/*
+
+FOOTER
+
+*/
+
+footer {
+    background-color: #1e9285;
+    display: flex;
+    padding: 4% 0;
+    font-size: 24px;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__logo--img {
+    width: 320px;
+}
+
+.footer__social--links {
+    width: 100%;
+    max-width: 640px;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+    color: #dcc831;
+    text-decoration: none;
 }
