--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@
     font-family: 'Inter', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 
 li {
     list-style-type: none;
@@ -21,6 +25,7 @@ p {
 
 section {
     background-color: #1e92851e;
+    transition: all 300ms ease;
 }
 
 .container {
@@ -93,6 +98,22 @@ button {
     width: 100%;
 }
 
+nav,
+.scroll, 
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 300ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 300ms ease;
+}
+
 input, textarea {
     width: 100%;
     background-color: black;
@@ -125,6 +146,41 @@ label {
     font-weight: bold;
 }
 
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section_sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para
+{
+    color: white;
+}
+
+.dark-theme section {
+    background-color: #1c1d25;
+}
+
+.dark-theme #personal-logo {
+    filter: invert() brightness(50);
+}
+
+.dark-theme .scroll__icon {
+    border-color: #dcc831;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+    background-color: white;
+}
+
+.dark-theme .link__hover-effect--yellow:after {
+    background-color: #dcc831;
+}
+
+.dark-theme .mail__btn {
+    background-color: #dcc831;
+    color: #1e9285;
+}
 /* 
 
 LANDING-PAGE 
@@ -275,10 +331,22 @@ MODAL
     width: 90%;
     max-width: 1100px;
     height: 700px;
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
     border-radius: 20px;
     overflow: hidden;
     display: flex;
+    visibility: hidden;
+    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+}
+
+.modal--open .modal {
+    z-index: 6;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+    visibility: visible;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact {
+    transform: translateX(0%);
 }
 
 .modal__half {
@@ -287,6 +355,7 @@ MODAL
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transition: all 300ms ease-in;
 }
 
 .modal__about {
@@ -294,6 +363,7 @@ MODAL
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transform: translateX(-110%);
 }
 
 .modal__languages {
@@ -334,6 +404,7 @@ MODAL
     flex-direction: column;
     gap: 24px;
     position: relative;
+    transform: translateX(110%);
 }
 
 .modal__language--img {
@@ -391,7 +462,7 @@ input {
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: -1;
@@ -413,6 +484,7 @@ input {
 
 .modal__overlay--visible {
     z-index: 1;
+    display: flex;
 }
 
 .fa-compact-disc {
@@ -532,6 +604,7 @@ FOOTER
 */
 
 footer {
+    position: relative;
     background-color: #1e9285;
     display: flex;
     padding: 4% 0;
@@ -561,3 +634,115 @@ footer {
     color: #dcc831;
     text-decoration: none;
 }
+
+/* 
+
+SHAPES
+
+pattern: 
+first row - height 15vh
+second row - height 50vh
+third row - height 80vh
+
+first column - 5vw
+second column - width 50vw
+third column - 80vw
+
+*/
+
+.shape {
+    position: fixed;
+}
+
+.shape--0 {
+    top: 15vh;
+    left: 5vw;
+}
+.shape--1 {
+    top: 15vh;
+    left: 50vw;
+}
+.shape--2 {
+    top: 15vh;
+    left: 80vw;
+}
+.shape--3 {
+    top: 50vh;
+    left: 5vw;
+}
+.shape--4 {
+    top: 50vh;
+    left: 50vw;
+}
+.shape--5 {
+    top: 50vh;
+    left: 80vw;
+}
+.shape--6 {
+    top: 80vh;
+    left: 5vw;
+}
+.shape--7 {
+    top: 80vh;
+    left: 50vw;
+}
+.shape--8 {
+    top: 80vh;
+    left: 80vw;
+}
+
+/* 
+
+RESPONSIVITY
+
+*/
+
+/* small phones, tablets, large smart phones */
+ @media (max-width: 768px) {
+    .title {
+        font-size: 80px;
+    }
+    .header__para {
+        font-size: 20px;
+    }
+    .modal {
+        top: 0;
+        left: 0;
+        transform: none;
+        height: auto;
+        width: 100%;
+        flex-direction: column-reverse;
+        border-radius: 0;
+    }
+    .modal__half {
+        width: 100%;
+    }
+ }
+
+ /* small phones */
+  @media (max-width: 480px) {
+    .title {
+        font-size: 52px;
+    }
+    .header__para {
+        font-size: 18px;
+    }
+    .nav__link:first-child {
+        display: none;
+    }
+    .project__description--para {
+        display: none;
+    }
+    .project__description {
+        left: 0;
+        padding: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .project__description--sub-title {
+        margin-bottom: 8px;
+    }
+    .modal__half {
+        padding: 40px;
+    }
+  }
